--- a/Suma2Lealtad/Views/Reporte/ReporteRecargas.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteRecargas.cshtml
@@ -10,7 +10,7 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Prepago / Reportes / Reporte de Recrgas</h3>
+            <h3 class="panel-title">Prepago / Reportes / Reporte de Recargas</h3>
         </div>
 
         <div class="panel-body">
