--- a/Suma2Lealtad/Views/AfiliadoSuma/ImpresoraImprimirTarjeta.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/ImpresoraImprimirTarjeta.cshtml
@@ -69,7 +69,7 @@
 
                 <!-- SECCION PARA VERIFICAR OPERACIONES Impresora-->
                 <div class="col-md-12">
-                    <p class="text-left" id="ElementoControl" style="display: none">ElementoControl</p>
+                    <p class="text-left" id="ElementoControl" style="display: normal">ElementoControl</p>
                 </div>
 
                 <!-- SilverLight -->
