--- a/Suma2Lealtad/Views/Home/Index.cshtml
+++ b/Suma2Lealtad/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <form class="form-horizontal" role="form">
+   @* <form class="form-horizontal" role="form">*@
 
         <div class="form-group">
 
@@ -24,7 +24,8 @@
 
         </div>
 
-    </form>    
+    @*</form>*@  
+      
     @*<a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-success btn-sm">Pruebas Prepago</a>*@
     
 }
