Ajustes de dependencias de librerias javascript, jquery y bootstrap

--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -75,6 +75,10 @@
     <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.bootstrap.wizard.min.js")"></script>
 
+    <script src="@Url.Content("~/Scripts/PruebaBS3Dialog/assets/prettify/run_prettify.js")"></script>
+    <link href="@Url.Content("~/Scripts/PruebaBS3Dialog/assets/bootstrap-dialog/css/bootstrap-dialog.css")" rel="stylesheet" />
+    <script src="@Url.Content("~/Scripts/PruebaBS3Dialog/assets/bootstrap-dialog/js/bootstrap-dialog.js")"></script>
+
     <script>
         jQuery.extend(jQuery.validator.messages, {
             required: "El campo es requerido.",
