--- a/Suma2Lealtad/Views/ClientePrepago/ImpresoraImprimirTarjeta.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/ImpresoraImprimirTarjeta.cshtml
@@ -153,11 +153,11 @@
 </div>
 <!--// columns -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
-<script src="~/Scripts/bootstrap.min.js"></script>
-<script src="~/Scripts/PruebaBS3Dialog/assets/prettify/run_prettify.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>*@
+@*<script src="~/Scripts/PruebaBS3Dialog/assets/prettify/run_prettify.js"></script>
 <link href="~/Scripts/PruebaBS3Dialog/assets/bootstrap-dialog/css/bootstrap-dialog.css" rel="stylesheet" />
-<script src="~/Scripts/PruebaBS3Dialog/assets/bootstrap-dialog/js/bootstrap-dialog.js"></script>
+<script src="~/Scripts/PruebaBS3Dialog/assets/bootstrap-dialog/js/bootstrap-dialog.js"></script>*@
 
 <script type="text/javascript">
     var Myinterval = setInterval(function () {
