Eliminar referencias a CSS y JS duplicadas e incluidas en _Layout

--- a/Suma2Lealtad/Views/AfiliadoSuma/SaldosMovimientos.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/SaldosMovimientos.cshtml
@@ -6,9 +6,9 @@
 }
 
 @*<link href="css/bootstrap.css" rel="stylesheet">*@
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
 @*<link href="css/style.css" rel="stylesheet">*@
-<link href="~/Content/style.css" rel="stylesheet" />
+@*<link href="~/Content/style.css" rel="stylesheet" />*@
 
 <style type="text/css" media="screen">
     .table-hover {
@@ -276,7 +276,7 @@
 </div>
 <!-- columns -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         $("#MovimientosPrepago").hide();
