--- a/Suma2Lealtad/Views/AfiliadoSuma/Index.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 @*<link href="css/bootstrap.css" rel="stylesheet">*@
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
 @*<link href="css/style.css" rel="stylesheet">*@
-<link href="~/Content/style.css" rel="stylesheet" />
+@*<link href="~/Content/style.css" rel="stylesheet" />*@
 
 <style type="text/css" media="screen">
     .table-hover {
@@ -48,7 +48,7 @@
                 </thead>
 
                 <tbody>
-                    @if (Model.First() != null)
+                    @if (Model.Count() != 0)
                     {
                         foreach (var item in Model)
                         {                            
@@ -131,7 +131,7 @@
 
 </div>
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         var rowId;
