--- a/Suma2Lealtad/Views/BeneficiarioPrepago/Create.cshtml
+++ b/Suma2Lealtad/Views/BeneficiarioPrepago/Create.cshtml
@@ -286,7 +286,7 @@
                             </div>
 
                             <!-- SECCION PARA VERIFICAR OPERACIONES ESCANER-->
-                            <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+                            @*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
                             <script>
                                 function ActualizaElementoControl(ElementoControl, ValorDeControl, InputFile, Docnumber) {
                                     var NombreArchivo = InputFile.value.split('\\');
@@ -529,7 +529,7 @@
 </div>
 <!--// container -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         VerificarTipoDocumento()
