--- a/Suma2Lealtad/Views/BeneficiarioPrepago/Edit.cshtml
+++ b/Suma2Lealtad/Views/BeneficiarioPrepago/Edit.cshtml
@@ -483,7 +483,7 @@
 </div>
 <!--// container -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         VerificarTipoDocumento()
