--- a/Suma2Lealtad/Views/BeneficiarioPrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/BeneficiarioPrepago/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 @*<link href="css/bootstrap.css" rel="stylesheet">*@
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
 @*<link href="css/style.css" rel="stylesheet">*@
-<link href="~/Content/style.css" rel="stylesheet" />
+@*<link href="~/Content/style.css" rel="stylesheet" />*@
 
 <style type="text/css" media="screen">
     .table-hover {
@@ -54,7 +54,7 @@
                 </thead>
 
                 <tbody>
-                    @if (Model.First().Afiliado != null)
+                    @if (Model.Count() != 0)
                     {
                         foreach (var item in Model)
                         {                            
@@ -137,7 +137,7 @@
 
 </div>
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         var rowId;
@@ -202,7 +202,7 @@
 
     $("#CrearPin").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-        var idcliente = @Model.First().Cliente.idCliente
+        @*var idcliente = @Model.First().Cliente.idCliente*@
         href = href.replace("{controller}", "BeneficiarioPrepago");
         href = href.replace("{action}", "CrearPin");
         href = href.replace("{params}", rowId);
@@ -211,7 +211,7 @@
 
     $("#CambiarPin").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-        var idcliente = @Model.First().Cliente.idCliente
+         @*var idcliente = @Model.First().Cliente.idCliente*@
         href = href.replace("{controller}", "BeneficiarioPrepago");
         href = href.replace("{action}", "CambiarPin");
         href = href.replace("{params}",  rowId);
@@ -220,7 +220,7 @@
 
     $("#ReiniciarPin").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-        var idcliente = @Model.First().Cliente.idCliente
+        @*var idcliente = @Model.First().Cliente.idCliente*@
         href = href.replace("{controller}", "BeneficiarioPrepago");
         href = href.replace("{action}", "ReiniciarPin");
         href = href.replace("{params}",  rowId);
@@ -229,7 +229,7 @@
 
     $("#ImprimirTarjeta").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-        var idcliente = @Model.First().Cliente.idCliente
+        @*var idcliente = @Model.First().Cliente.idCliente*@
         href = href.replace("{controller}", "BeneficiarioPrepago");
         href = href.replace("{action}", "ImprimirTarjeta");
         href = href.replace("{params}",  rowId);
@@ -238,7 +238,7 @@
 
     $("#BloquearTarjeta").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-        var idcliente = @Model.First().Cliente.idCliente
+        @*var idcliente = @Model.First().Cliente.idCliente*@ 
         href = href.replace("{controller}", "BeneficiarioPrepago");
         href = href.replace("{action}", "BloquearTarjeta");
         href = href.replace("{params}", rowId);
@@ -247,7 +247,7 @@
 
     $("#SuspenderTarjeta").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-        var idcliente = @Model.First().Cliente.idCliente
+        @*var idcliente = @Model.First().Cliente.idCliente*@
         href = href.replace("{controller}", "BeneficiarioPrepago");
         href = href.replace("{action}", "SuspenderTarjeta");
         href = href.replace("{params}",  rowId);
@@ -256,7 +256,7 @@
 
     $("#ReactivarTarjeta").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-        var idcliente = @Model.First().Cliente.idCliente
+        @*var idcliente = @Model.First().Cliente.idCliente*@
         href = href.replace("{controller}", "BeneficiarioPrepago");
         href = href.replace("{action}", "ReactivarTarjeta");
         href = href.replace("{params}",  rowId);
@@ -265,7 +265,7 @@
 
     $("#SaldosMovimientos").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-        var idcliente = @Model.First().Cliente.idCliente
+        @*var idcliente = @Model.First().Cliente.idCliente*@
         href = href.replace("{controller}", "BeneficiarioPrepago");
         href = href.replace("{action}", "SaldosMovimientos");
         href = href.replace("{params}",  rowId);
