--- a/Suma2Lealtad/Views/ClientePrepago/CargarArchivoRecarga.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/CargarArchivoRecarga.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
-<link href="~/Content/style.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<link href="~/Content/style.css" rel="stylesheet" />*@
 
 <style type="text/css" media="screen">
     .table-hover {
