--- a/Suma2Lealtad/Views/ClientePrepago/EditBeneficiario.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/EditBeneficiario.cshtml
@@ -469,7 +469,7 @@
 </div>
 <!--// container -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         VerificarTipoDocumento()
