--- a/Suma2Lealtad/Views/ClientePrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/Index.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
-<link href="~/Content/style.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
+@*<link href="~/Content/style.css" rel="stylesheet" />*@
 
 <style type="text/css" media="screen">
     .table-hover {
@@ -124,7 +124,7 @@
 </div>
 <!-- container -->*@
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         var rowId;
