--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/Index.cshtml
@@ -54,7 +54,7 @@
                 </thead>
 
                 <tbody>
-                    @if (Model.First().id != 0)
+                    @if (Model.Count() != 0)
                     {
                         foreach (var item in Model)
                         {                            
