--- a/Suma2Lealtad/Views/FueraLineaPrepago/AddNew.cshtml
+++ b/Suma2Lealtad/Views/FueraLineaPrepago/AddNew.cshtml
@@ -79,7 +79,7 @@
 </div>
 <!-- panel -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     //$(document).ready(function () {
     //    ValidarMontos()
