--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/Create.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/Create.cshtml
@@ -5,9 +5,9 @@
 }
 
 @*<link href="css/bootstrap.css" rel="stylesheet">*@
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
 @*<link href="css/style.css" rel="stylesheet">*@
-<link href="~/Content/style.css" rel="stylesheet" />
+@*<link href="~/Content/style.css" rel="stylesheet" />*@
 
 <style type="text/css" media="screen">
     .table-hover {
@@ -176,7 +176,7 @@
 </div>
 <!-- panel -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         ValidarMontos()
