--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/Filter.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/Filter.cshtml
@@ -65,7 +65,7 @@
 </div>
 <!--// columns -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $("#idCliente").change(function () {
         LimpiarSpanMessage('mensaje');
