--- a/Suma2Lealtad/Views/OrdenRecargaPrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/OrdenRecargaPrepago/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 @*<link href="css/bootstrap.css" rel="stylesheet">*@
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
 @*<link href="css/style.css" rel="stylesheet">*@
-<link href="~/Content/style.css" rel="stylesheet" />
+@*<link href="~/Content/style.css" rel="stylesheet" />*@
 
 <style type="text/css" media="screen">
     .table-hover {
