--- a/Suma2Lealtad/Views/Reporte/FilterReporteCompras.cshtml
+++ b/Suma2Lealtad/Views/Reporte/FilterReporteCompras.cshtml
@@ -126,7 +126,7 @@
 </div>
 <!--// container -->
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         $(".numdoc").hide();
