--- a/Suma2Lealtad/Views/Reporte/ReporteTarjetas.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteTarjetas.cshtml
@@ -173,7 +173,7 @@
 
 </div>
 
-<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/jquery-2.1.3.min.js"></script>*@
 <script>
     $(document).ready(function () {
         AjustarParametros();
