Validacion de Cliente sin beneficiario activo con tarjeta activa para crear orden y crear orden desde archivo

--- a/Suma2Lealtad/Views/Reporte/ReporteTransacciones.cshtml
+++ b/Suma2Lealtad/Views/Reporte/ReporteTransacciones.cshtml
@@ -117,7 +117,7 @@
                                 @(String.Format("{0}", item.fecha.ToString("dd/MM/yyyy hh:mm tt")))
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.numerotarjeta)
+                               @(String.Format("{0}", Math.Truncate(item.numerotarjeta)))
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.monto)
